test_scripts/safe_scripts/multi-exec/errors/skiponerror.js
console.log("start of script");
console.log(i);
console.log("end of script (TEST PASS)");
